sandbox/output
FizzBuzz.java:15: error: cannot find symbol
        result = this.fizzBuzzHandler.handle(number);
                                     ^
  symbol:   method handle(int)
  location: variable fizzBuzzHandler of type Handler
FizzBuzzHandler.java:5: error: method does not override or implement a method from a supertype
    @Override
    ^
2 errors
